# llm-rules-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml  flake.nix
src/: mcp_server_llm_rules.rs
