[package]
name = "mcp-server-llm-rules"
version = "0.1.0"
edition = "2021"
authors = ["Hunter Haugen <hunter@haugen.email>"]
description = "Zed extension for llm-rules MCP"
license = "Apache-2.0"

[lib]
path = "src/mcp_server_llm_rules.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.5.0"
